--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 target/
+out/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -37,3 +38,8 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+# Maven
+pom.xml.tag
+pom.xml.releaseBackup
+release.properties
