--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+name: CI
 on:
   push:
     branches: [ main, develop ]
@@ -21,25 +22,30 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build with Maven
-        run: mvn -B clean compile
+      - name: Test
+        run: mvn -B clean test
 
-      - name: Run tests
-        run: mvn -B test
+      - name: Build and Test
+        run: mvn -B clean test
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-            context: .
-            push: true
-            tags: ghcr.io/${{ github.repository_owner }}/user-manager:latest
+      - name: Login to GHCR and Push Docker Image
+        env:
+          GHCR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          make ci-docker
+#      - name: Log in to GitHub Container Registry
+#        uses: docker/login-action@v3
+#        with:
+#          registry: ghcr.io
+#          username: ${{ github.actor }}
+#          password: ${{ secrets.GITHUB_TOKEN }}
+#
+#      - name: Build and push Docker image
+#        uses: docker/build-push-action@v5
+#        with:
+#            context: .
+#            push: true
+#            tags: ghcr.io/${{ github.repository_owner }}/user-manager:latest
             # Optional: tag with commit SHA too
             # tags: |
             #   ghcr.io/${{ github.repository_owner }}/user-manager:latest
