--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ Answer, develop ]
     pull_request:
       branches: [ main ]
 jobs:
@@ -25,8 +25,8 @@ jobs:
       - name: Test
         run: mvn -B clean test
 
-      - name: Build and Test
-        run: mvn -B clean test
+#      - name: Build and Test
+#        run: mvn -B clean test
 
       - name: Login to GHCR and Push Docker Image
         env:
