--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI
 on:
   push:
-    branches: [ Answer, develop ]
+    branches: [ main, develop ]
     pull_request:
       branches: [ main ]
 jobs:
